faet #4 rating label

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@ html {
   touch-action: pan-y;
 }
 body {
-  font-family: "Noto Sans KR Variable", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
